--- a/mocks/nginx.conf
+++ b/mocks/nginx.conf
@@ -9,4 +9,8 @@ server {
     location /token {
         proxy_pass http://oidc-app:5060/token;
     }
+
+    location /userinfo {
+        proxy_pass http://oidc-mock:4010/userinfo;
+    }
 }
