--- a/mocks/OIDCSpec.yml
+++ b/mocks/OIDCSpec.yml
@@ -181,18 +181,18 @@ paths:
                     example: '248289761001'
                   email:
                     type: string
-                    example: janedoe@example.com
+                    example: 'gideon.felix@example.org'
                   email_verified:
                     type: boolean
                     example: true
                   phone:
                     type: string
-                    example: 012112345678
+                    example: '012112345678'
                   phone_verified:
                     type: boolean
                     example: true
                   updated_at:
-                    type: string
+                    type: integer
                     example: 1660573766
         '400':
           description: A CORS request failed.
