Try out OIDC provider

--- a/mocks/nginx.conf
+++ b/mocks/nginx.conf
@@ -13,4 +13,10 @@ server {
     location /userinfo {
         proxy_pass http://oidc-mock:4010/userinfo;
     }
+
+    location /.well-known/openid-configuration {
+        proxy_pass http://oidc-mock:4010/.well-known/openid-configuration;
+    }
+
+
 }
