--- a/mocks/GOVUKSignIn/Dockerfile
+++ b/mocks/GOVUKSignIn/Dockerfile
@@ -6,7 +6,7 @@ WORKDIR /app
 
 COPY . .
 
-RUN CGO_ENABLED=0 GOOS=linux GOARCH=amd64 go build -a -installsuffix cgo -o proxy main.go
+RUN CGO_ENABLED=0 GOOS=linux GOARCH=amd64 go build -a -installsuffix cgo -o signIn main.go
 
 RUN openssl genpkey -algorithm RSA -out ./private_key.pem -pkeyopt rsa_keygen_bits:2048 && \
   openssl rsa -pubout -in ./private_key.pem -out ./public_key.pem
@@ -17,6 +17,4 @@ RUN addgroup --system app && \
 
 USER app
 
-#ENTRYPOINT [ "/app/entrypoint.sh" ]
-
-CMD [ "/app/proxy" ]
+CMD [ "/app/signIn" ]
