--- a/.github/workflows/workflow_pr.yml
+++ b/.github/workflows/workflow_pr.yml
@@ -84,11 +84,11 @@ jobs:
     runs-on: ubuntu-latest
     environment:
       name: "dev_${{ needs.create_tags.outputs.environment_workspace_name }}"
-      url: "https://${{ needs.pr_deploy.outputs.url }}/home"
+      url: "https://${{ needs.pr_deploy.outputs.url }}"
     needs: [pr_deploy, create_tags]
     steps:
       - name: End of PR Workflow
         run: |
           echo "${{ needs.pr_deploy.outputs.terraform_workspace_name }} PR environment tested, built and deployed"
           echo "Tag Deployed: ${{ needs.pr_deploy.outputs.terraform_container_version }}"
-          echo "URL: https://${{ needs.pr_deploy.outputs.url }}/home"
+          echo "URL: https://${{ needs.pr_deploy.outputs.url }}"
