--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -10,6 +10,12 @@ services:
       - localstack
     ports:
       - "5050:5000"
+    environment:
+      - APP_HOST=http://app
+      - APP_PORT=5000
+      - AWS_BASE_URL=http://localstack:4566
+      - CLIENT_ID=client-id-value
+      - GOV_UK_SIGN_IN_URL=http://sign-in-mock:5060
 
   localstack:
     build:
@@ -23,3 +29,15 @@ services:
       - DEFAULT_REGION=eu-west-1
       - USE_SINGLE_REGION=1
       - DEBUG=1
+
+  sign-in-mock:
+    build:
+      context: mocks/GOVUKSignIn
+    container_name: sign-in-mock
+    ports:
+      - "7012:5060"
+    environment:
+      - AWS_BASE_URL=http://localstack:4566
+      - MLPA_BASE_URL=http://app:5000
+      - PROXY_PORT=5060
+      - PROXY_PRIVATE_KEY=/app/private_key.pem
