--- a/.github/workflows/terraform_environment_job.yml
+++ b/.github/workflows/terraform_environment_job.yml
@@ -94,6 +94,11 @@ jobs:
           terraform apply -lock-timeout=300s -input=false -auto-approve -parallelism=30
         working-directory: ./terraform/environment
 
+      - uses: actions/upload-artifact@v2
+        with:
+          name: environment_config_file
+          path: ./terraform/environment/environment_config.json
+
       - name: Terraform Outputs
         id: terraform_outputs
         env:
