--- a/.github/workflows/manage_ingress_job.yml
+++ b/.github/workflows/manage_ingress_job.yml
@@ -38,4 +38,4 @@ jobs:
         with:
           python-version: '3.9'
           check-latest: true
-      - run: pip install -r ./scripts/requirements.txt
+      - run: pip install -r ./scripts/ci_ingress/requirements.txt
