manage ingress inside ui job

--- a/.github/workflows/manage_ingress_job.yml
+++ b/.github/workflows/manage_ingress_job.yml
@@ -12,7 +12,7 @@ defaults:
     shell: bash
 
 jobs:
-  run_ui_tests:
+  manage_ingress:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v3
