--- a/.github/workflows/workflow_pr.yml
+++ b/.github/workflows/workflow_pr.yml
@@ -89,28 +89,14 @@ jobs:
         # version_tag: ${{ needs.create_tags.outputs.version_tag }}
       secrets: inherit
 
-  open_ingress:
-    name: Open ingress to env for UI testing
-    uses: ./.github/workflows/manage_ingress_job.yml
-    needs: [pr_deploy]
-    secrets: inherit
-    with:
-      add: true
-
   ui_tests_pr_env:
     name: Run Cypress UI Tests On PR Environment
     uses: ./.github/workflows/ui_test_job.yml
-    needs: [pr_deploy, create_tags, open_ingress]
+    needs: [pr_deploy, create_tags]
     with:
       run_against_image: false
       base_url: "https://${{ needs.pr_deploy.outputs.url }}"
       tag: ${{ needs.create_tags.outputs.version_tag }}
-    secrets: inherit
-
-  close_ingress:
-    name: Close ingress to env for UI testing
-    uses: ./.github/workflows/manage_ingress_job.yml
-    needs: [ui_tests_pr_env]
     secrets: inherit
 
   end_of_pr_workflow:
