--- a/.github/workflows/ui_test_job.yml
+++ b/.github/workflows/ui_test_job.yml
@@ -92,7 +92,7 @@ jobs:
           CYPRESS_baseUrl: "${{ inputs.base_url }}"
 
       - name: remove_ingress
-        if: ${{ inputs.run_against_image != true }}
+        if: ${{ inputs.run_against_image != true }} && ${{ always() }}
         run: python ./scripts/ci_ingress/ci_ingress.py ./environment_config.json
 
       - name: Stop Docker Compose Service
