--- a/.github/workflows/ui_test_job.yml
+++ b/.github/workflows/ui_test_job.yml
@@ -53,11 +53,8 @@ jobs:
         run: |
           docker compose -f docker-compose.ci.yml up -d
           # docker run -d -p 5050:5000 $ECR_REGISTRY/$ECR_REPOSITORY:$TAG
-      - name: Check IP
-        run: |
-          curl https://checkip.amazonaws.com
 
-      - name: Run Against Image/Configure AWS Credentials
+      - name: Manage Ingress/Configure AWS Credentials
         if: ${{ inputs.run_against_image != true }}
         uses: aws-actions/configure-aws-credentials@v1.6.1
         with:
@@ -66,9 +63,7 @@ jobs:
           aws-region: eu-west-1
           role-duration-seconds: 900
           role-session-name: OPGModernisingLPATerraformGithubAction
-
       - name: Download environment config file
-        if: ${{ inputs.run_against_image != true }}
         uses: actions/download-artifact@v3
         with:
           name: environment_config_file
@@ -77,14 +72,10 @@ jobs:
         with:
           python-version: '3.9'
           check-latest: true
-
       - run: pip install -r ./scripts/ci_ingress/requirements.txt
-        if: ${{ inputs.run_against_image != true }}
-
       - name: add_ingress
         if: ${{ inputs.run_against_image != true }}
         run: python ./scripts/ci_ingress/ci_ingress.py ./environment_config.json --add
-
 
       - name: Cypress run
         uses: cypress-io/github-action@v4
@@ -92,7 +83,7 @@ jobs:
           CYPRESS_baseUrl: "${{ inputs.base_url }}"
 
       - name: remove_ingress
-        if: ${{ inputs.run_against_image != true }} && ${{ always() }}
+        if: ${{ always() }}
         run: python ./scripts/ci_ingress/ci_ingress.py ./environment_config.json
 
       - name: Stop Docker Compose Service
