--- a/.github/workflows/remove_ingress_job.yml
+++ b/.github/workflows/remove_ingress_job.yml
@@ -6,13 +6,12 @@ defaults:
     shell: bash
 
 jobs:
-  run_ui_tests:
+  remove_ingress:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v3
       - uses: unfor19/install-aws-cli-action@v1
         name: Run Against Image/aws-cli-action
-      - name: Run Against Image/Configure AWS Credentials
       - name: Manage Ingress/Configure AWS Credentials
         uses: aws-actions/configure-aws-credentials@v1.6.1
         with:
