--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -13,6 +13,8 @@ services:
     environment:
       - APP_PUBLIC_URL=http://localhost:5050
       - APP_PORT=8080
+      - AWS_ACCESS_KEY_ID=fakeKeyId
+      - AWS_SECRET_ACCESS_KEY=fakeAccessKey
       - AWS_BASE_URL=http://localstack:4566
       - CLIENT_ID=client-id-value
       - GOV_UK_SIGN_IN_URL=http://sign-in-mock:5060
