--- a/.github/workflows/ui_test_job.yml
+++ b/.github/workflows/ui_test_job.yml
@@ -87,4 +87,4 @@ jobs:
       - name: Stop Docker Compose Service
         if: ${{ always() }}
         run:
-          docker compose -f docker-compose.ci.yml down
+          docker compose -f docker-compose.yml -f docker-compose.ci.yml down
