--- a/mocks/GOVUKSignIn/Dockerfile
+++ b/mocks/GOVUKSignIn/Dockerfile
@@ -1,6 +1,6 @@
 FROM golang:1.18 as build-env
 
-RUN apt-get install openssl
+RUN apt-get install -y --no-install-recommends openssl
 
 WORKDIR /app
 
@@ -9,8 +9,8 @@ COPY . .
 RUN CGO_ENABLED=0 GOOS=linux GOARCH=amd64 go build -a -installsuffix cgo -o signIn main.go
 
 RUN addgroup --system app && \
-    adduser --system --gecos app app && \
-    chown -R app:app /app
+  adduser --system --gecos app app && \
+  chown -R app:app /app
 
 USER app
 
