--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -8,6 +8,8 @@ services:
     container_name: app
     depends_on:
       - localstack
+      - sign-in-mock
+    restart: on-failure
     ports:
       - "5050:8080"
     environment:
@@ -15,10 +17,10 @@ services:
       - APP_PORT=8080
       - AWS_ACCESS_KEY_ID=fakeKeyId
       - AWS_SECRET_ACCESS_KEY=fakeAccessKey
+      - AWS_REGION=eu-west-1
       - AWS_BASE_URL=http://localstack:4566
       - CLIENT_ID=client-id-value
-      - GOV_UK_SIGN_IN_URL=http://sign-in-mock:5060
-      - GOV_UK_SIGN_IN_PUBLIC_URL=http://localhost:7012
+      - ISSUER=http://sign-in-mock:8080
 
   localstack:
     build:
@@ -38,8 +40,7 @@ services:
       context: mocks/GOVUKSignIn
     container_name: sign-in-mock
     ports:
-      - "7012:5060"
+      - "7012:8080"
     environment:
       - AWS_BASE_URL=http://localstack:4566
-      - PROXY_PORT=5060
-      - PROXY_PRIVATE_KEY=/app/private_key.pem
+      - PUBLIC_URL=http://localhost:7012
