--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -6,5 +6,41 @@ services:
       context: .
       dockerfile: Dockerfile
     container_name: app
+    depends_on:
+      - localstack
+      - sign-in-mock
+    restart: on-failure
     ports:
       - "5050:8080"
+    environment:
+      - APP_PUBLIC_URL=http://localhost:5050
+      - APP_PORT=8080
+      - AWS_ACCESS_KEY_ID=fakeKeyId
+      - AWS_SECRET_ACCESS_KEY=fakeAccessKey
+      - AWS_REGION=eu-west-1
+      - AWS_BASE_URL=http://localstack:4566
+      - CLIENT_ID=client-id-value
+      - ISSUER=http://sign-in-mock:8080
+
+  localstack:
+    build:
+      context: .
+      dockerfile: ./localstack.Dockerfile
+    ports:
+      - "4566:4566"
+    environment:
+      - SERVICES=secretsmanager
+      - DATA_DIR=/tmp/localstack/data
+      - DEFAULT_REGION=eu-west-1
+      - USE_SINGLE_REGION=1
+      - DEBUG=1
+
+  sign-in-mock:
+    build:
+      context: mocks/GOVUKSignIn
+    container_name: sign-in-mock
+    ports:
+      - "7012:8080"
+    environment:
+      - AWS_BASE_URL=http://localstack:4566
+      - PUBLIC_URL=http://localhost:7012
