--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -42,5 +42,5 @@ services:
     ports:
       - "7012:8080"
     environment:
-      - AWS_BASE_URL=http://localstack:4566
       - PUBLIC_URL=http://localhost:7012
+      - CLIENT_ID=client-id-value
