--- a/.github/workflows/workflow_destroy_pr_environment.yml
+++ b/.github/workflows/workflow_destroy_pr_environment.yml
@@ -32,8 +32,20 @@ defaults:
     shell: bash
 
 jobs:
-  create_tags:
-    uses: ./.github/workflows/tags_job.yml
+  generate_environment_workspace_name:
+    runs-on: ubuntu-latest
+    steps:
+      - name: Generate workspace name
+        id: name_workspace
+        run: |
+          workspace=${{ github.event.number }}${{ github.event.head.ref }}
+          workspace=${workspace//-}
+          workspace=${workspace//_}
+          workspace=${workspace//\/}
+          workspace=${workspace:0:11}
+          workspace=$(echo ${workspace} | tr '[:upper:]' '[:lower:]')
+          echo ::set-output name=name::${workspace}
+          echo ${workspace}
 
   cleanup_workspace:
     runs-on: ubuntu-latest
