--- a/.github/workflows/workflow_destroy_pr_environment.yml
+++ b/.github/workflows/workflow_destroy_pr_environment.yml
@@ -46,11 +46,11 @@ jobs:
           workspace=$(echo ${workspace} | tr '[:upper:]' '[:lower:]')
           echo ::set-output name=name::${workspace}
           echo ${workspace}
-
+    outputs:
+          environment_workspace_name: ${{ steps.name_workspace.outputs.name }}
   cleanup_workspace:
     runs-on: ubuntu-latest
-    needs:
-      - workspace_name
+    needs: generate_environment_workspace_name
     steps:
       - name: Checkout
         uses: actions/checkout@v3
@@ -71,4 +71,4 @@ jobs:
       - name: Destroy PR Terraform Workspaces
         working-directory: ./terraform/environment
         run: |
-          ../../scripts/workspace_cleanup.sh ${{ needs.create_tags.outputs.environment_workspace_name }}
+          ../../scripts/workspace_cleanup.sh ${{ needs.generate_environment_workspace_name.outputs.environment_workspace_name }}
