--- a/.github/workflows/workflow_destroy_pr_environment.yml
+++ b/.github/workflows/workflow_destroy_pr_environment.yml
@@ -48,13 +48,13 @@ jobs:
           echo ${workspace}
     outputs:
           environment_workspace_name: ${{ steps.name_workspace.outputs.name }}
+
   cleanup_workspace:
     runs-on: ubuntu-latest
     needs: generate_environment_workspace_name
     steps:
       - name: Checkout
         uses: actions/checkout@v3
-
       - name: Configure AWS Credentials For Terraform
         uses: aws-actions/configure-aws-credentials@v1
         with:
@@ -63,11 +63,12 @@ jobs:
           aws-region: eu-west-1
           role-duration-seconds: 3600
           role-session-name: OPGModernisingLPATerraformGithubAction
-
       - uses: webfactory/ssh-agent@v0.5.4
         with:
           ssh-private-key: ${{ secrets.OPG_MODERNISING_LPA_DEPLOY_KEY_PRIVATE_KEY }}
-
+      - name: Terraform Init
+        run: terraform init -input=false
+        working-directory: ./terraform/environment
       - name: Destroy PR Terraform Workspaces
         working-directory: ./terraform/environment
         run: |
