--- a/.github/workflows/workflow_destroy_pr_environment.yml
+++ b/.github/workflows/workflow_destroy_pr_environment.yml
@@ -69,14 +69,13 @@ jobs:
       - name: Terraform Init
         run: terraform init -input=false
         working-directory: ./terraform/environment
-      - name: Remove protection for environment workspace
+      - name: Extend protection for environment workspace
         if: github.ref != 'refs/heads/main'
         run: |
           wget https://github.com/TomTucka/terraform-workspace-manager/releases/download/v0.3.1/terraform-workspace-manager_Linux_x86_64.tar.gz -O $HOME/terraform-workspace-manager.tar.gz
           sudo tar -xvf $HOME/terraform-workspace-manager.tar.gz -C /usr/local/bin
           sudo chmod +x /usr/local/bin/terraform-workspace-manager
-          terraform-workspace-manager -register-workspace=${{ needs.generate_environment_workspace_name.outputs.environment_workspace_name }} -time-to-protect=0 -aws-account-id=653761790766 -aws-iam-role=modernising-lpa-ci
-          sleep 5
+          terraform-workspace-manager -register-workspace=${{ needs.generate_environment_workspace_name.outputs.environment_workspace_name }} -time-to-protect=1 -aws-account-id=653761790766 -aws-iam-role=modernising-lpa-ci
         working-directory: ./terraform/environment
       - name: Destroy PR environment and Terraform workspace
         working-directory: ./terraform/environment
@@ -85,3 +84,7 @@ jobs:
           terraform destroy -auto-approve
           terraform workspace select default
           terraform workspace delete ${{ needs.generate_environment_workspace_name.outputs.environment_workspace_name }}
+      - name: Remove protection for environment workspace
+        if: github.ref != 'refs/heads/main'
+        run: |
+          terraform-workspace-manager -register-workspace=${{ needs.generate_environment_workspace_name.outputs.environment_workspace_name }} -time-to-protect=0 -aws-account-id=653761790766 -aws-iam-role=modernising-lpa-ci
