--- a/.github/workflows/workflow_pr.yml
+++ b/.github/workflows/workflow_pr.yml
@@ -80,7 +80,8 @@ jobs:
 
   pr_deploy:
       name: PR Environment Deploy
-      needs: [create_tags, docker_build_scan_push, ui_tests_image]
+      needs: [create_tags]
+      # needs: [create_tags, docker_build_scan_push, ui_tests_image]
       uses: ./.github/workflows/terraform_environment_job.yml
       with:
         workspace_name: ${{ needs.create_tags.outputs.environment_workspace_name }}
