--- a/docker-compose.testing.yml
+++ b/docker-compose.testing.yml
@@ -1,6 +1,10 @@
 version: '3.8'
 
 services:
+  app:
+    environment:
+      - APP_PUBLIC_URL=http://app:8080
+      - GOV_UK_SIGN_IN_PUBLIC_URL=http://sign-in-mock:5060
   cypress:
     # the Docker image to use from https://github.com/cypress-io/cypress-docker-images
     image: "cypress/included:10.7.0"
