--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -9,6 +9,7 @@ repos:
       - id: check-added-large-files # prevents giant files from being committed.
         args: [ "--maxkb=20480" ]
       - id: check-case-conflict # checks for files that would conflict in case-insensitive filesystems.
+      - id: check-json # Attempts to load all json files to verify syntax.
       - id: check-merge-conflict # checks for files that contain merge conflict strings.
       - id: check-yaml # checks yaml files for parseable syntax.
       - id: detect-private-key # detects the presence of private keys.
