--- a/.github/workflows/workflow_pr.yml
+++ b/.github/workflows/workflow_pr.yml
@@ -85,7 +85,7 @@ jobs:
       uses: ./.github/workflows/terraform_environment_job.yml
       with:
         workspace_name: ${{ needs.create_tags.outputs.environment_workspace_name }}
-        version_tag: latest
+        version_tag: v0.76.0
         # version_tag: ${{ needs.create_tags.outputs.version_tag }}
       secrets: inherit
 
