use gtihub.head_ref as env var isn't set here

--- a/.github/workflows/docker_job.yml
+++ b/.github/workflows/docker_job.yml
@@ -54,7 +54,7 @@ jobs:
           ECR_REPOSITORY: modernising-lpa/app
         run: |
           docker tag app:latest $ECR_REGISTRY/$ECR_REPOSITORY:${{ inputs.tag }}
-          if [ $BRANCH_NAME == "main" ]; then
+          if [ ${{ github.head_ref }} == "main" ]; then
             docker tag app:latest $ECR_REGISTRY/$ECR_REPOSITORY:main-${{ inputs.tag }}
             docker tag app:latest $ECR_REGISTRY/$ECR_REPOSITORY:latest
           fi
