--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -21,6 +21,7 @@ services:
       - AWS_REGION=eu-west-1
       - AWS_BASE_URL=http://localstack:4566
       - CLIENT_ID=client-id-value
+      - GOVUK_PAY_BASE_URL=http://pay-mock:4010
       - ISSUER=http://sign-in-mock:8080
       - DYNAMODB_TABLE_LPAS=lpas
 
