--- a/.github/workflows/ui_test_job.yml
+++ b/.github/workflows/ui_test_job.yml
@@ -57,7 +57,7 @@ jobs:
           TAG: ${{ inputs.tag }}
         run: |
           docker compose -f docker-compose.yml -f docker-compose.ci.yml build
-          docker compose -f docker-compose.yml -f docker-compose.ci.yml up -d
+          docker compose -f docker-compose.yml -f docker-compose.ci.yml up app -d
 
       - name: Manage Ingress/Configure AWS Credentials
         if: ${{ inputs.run_against_image != true }}
