--- a/.github/workflows/ui_test_job.yml
+++ b/.github/workflows/ui_test_job.yml
@@ -89,6 +89,7 @@ jobs:
         with:
 #          wait-on: ${{ inputs.pay_base_url }}
           record: true
+          video: true
         env:
           CYPRESS_baseUrl: ${{ inputs.base_url }}
           CYPRESS_RECORD_KEY: ${{ secrets.CYPRESS_RECORD_KEY }}
