MLPAB-236: Redirect after creating payment (#114)

--- a/.github/workflows/ui_test_job.yml
+++ b/.github/workflows/ui_test_job.yml
@@ -81,8 +81,12 @@ jobs:
 
       - name: Cypress run
         uses: cypress-io/github-action@v4
+        with:
+          record: true
         env:
-          CYPRESS_baseUrl: "${{ inputs.base_url }}"
+          CYPRESS_baseUrl: ${{ inputs.base_url }}
+          CYPRESS_RECORD_KEY: ${{ secrets.CYPRESS_RECORD_KEY }}
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
 
       - name: Stop Docker Compose Service
         if: ${{ always() }}
