--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -21,9 +21,10 @@ services:
       - AWS_REGION=eu-west-1
       - AWS_BASE_URL=http://localstack:4566
       - CLIENT_ID=client-id-value
+      - DYNAMODB_TABLE_LPAS=lpas
       - GOVUK_PAY_BASE_URL=http://pay-mock:4010
       - ISSUER=http://sign-in-mock:8080
-      - DYNAMODB_TABLE_LPAS=lpas
+      - AUTH_REDIRECT_BASE_URL=http://localhost:5050
 
   localstack:
     build:
@@ -50,7 +51,9 @@ services:
 
   pay-mock:
     image: stoplight/prism:4.11.0
-    command: 'mock https://raw.githubusercontent.com/alphagov/pay-publicapi/master/openapi/publicapi_spec.json -h 0.0.0.0'
+    command: 'mock /tmp/publicapi_spec.json -h 0.0.0.0'
     container_name: pay-mock
     ports:
       - '4010:4010'
+    volumes:
+      - ./mocks/GOVUKPay:/tmp
