Bring package command in line with others

--- a/.gitignore
+++ b/.gitignore
@@ -22,6 +22,7 @@ query/s3_objects/**
 /cypress/video/*
 /cypress/screenshots/*
 /cypress/parallel-weights.json
+multi-reporter-config.json
 /runner-results
 /web/static/*
 **tmp/*
