--- a/.github/workflows/workflow_pr.yml
+++ b/.github/workflows/workflow_pr.yml
@@ -14,6 +14,7 @@ on:
       - '.github/workflows/**'
 
 permissions:
+  id-token: write
   contents: write
   security-events: write
   pull-requests: read
