--- a/.github/workflows/docker_job.yml
+++ b/.github/workflows/docker_job.yml
@@ -14,6 +14,8 @@ jobs:
   docker_build_scan_push:
     runs-on: ubuntu-latest
     steps:
+
+
       # - uses: actions/checkout@v3
       # - name: Build Image
       #   id: build_image
@@ -33,17 +35,19 @@ jobs:
       #   if: always()
       #   with:
       #     sarif_file: 'trivy-results.sarif'
+
       - uses: unfor19/install-aws-cli-action@v1
       - name: Configure AWS Credentials
         uses: aws-actions/configure-aws-credentials@v1.7.0
         with:
-          # aws-access-key-id: ${{ secrets.AWS_ACCESS_KEY_ID_ACTIONS }}
-          # aws-secret-access-key: ${{ secrets.AWS_SECRET_ACCESS_KEY_ACTIONS }}
           aws-region: eu-west-1
           role-to-assume: arn:aws:iam::311462405659:role/github-actions-ecr-push
+
+          # aws-access-key-id: ${{ secrets.AWS_ACCESS_KEY_ID_ACTIONS }}
+          # aws-secret-access-key: ${{ secrets.AWS_SECRET_ACCESS_KEY_ACTIONS }}
           # role-to-assume: arn:aws:iam::311462405659:role/modernising-lpa-ci
-          role-duration-seconds: 900
-          role-session-name: GithubActionsECRPushMLPAB
+          # role-duration-seconds: 900
+          # role-session-name: GithubActionsECRPushMLPAB
           # role-session-name: OPGModernisingLPATerraformGithubAction
       - name: ECR Login
         id: login_ecr
