--- a/.github/workflows/docker_job.yml
+++ b/.github/workflows/docker_job.yml
@@ -10,6 +10,10 @@ defaults:
   run:
     shell: bash
 
+permissions:
+  id-token: write
+  contents: read
+
 jobs:
   docker_build_scan_push:
     runs-on: ubuntu-latest
