--- a/.github/workflows/workflow_pr.yml
+++ b/.github/workflows/workflow_pr.yml
@@ -42,13 +42,13 @@ jobs:
   docker_build_scan_push:
     name: Docker Build, Scan and Push
     uses: ./.github/workflows/docker_job.yml
-    with:
-      tag: ${{ needs.create_tags.outputs.version_tag }}
-    secrets: inherit
     needs: [
       go_unit_tests,
       create_tags
       ]
+    with:
+      tag: ${{ needs.create_tags.outputs.version_tag }}
+    # secrets: inherit
 
   terraform_account_workflow_development:
     name: TF Plan Dev Account
