MLAPB-267: Try cypress-parallel (#124)

--- a/.gitignore
+++ b/.gitignore
@@ -21,5 +21,8 @@ query/s3_objects/**
 **/yarn-error.log
 /cypress/video/*
 /cypress/screenshots/*
+/cypress/parallel-weights.json
+multi-reporter-config.json
+/runner-results
 /web/static/*
 **tmp/*
