--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -23,23 +23,24 @@ repos:
     hooks:
     - id: git-secrets
   - repo: https://github.com/zricethezav/gitleaks
-    rev: v8.9.0
+    rev: v8.13.0
     hooks:
     -   id: gitleaks
+        entry: gitleaks detect --baseline-path gitleaks-baseline.json
   - repo: https://github.com/antonbabenko/pre-commit-terraform
-    rev: v1.74.1
+    rev: v1.76.0
     hooks:
       - id: terraform_fmt
       # - id: terraform_validate
       #   exclude: region/[^/]+$.
 
   - repo: https://github.com/dnephin/pre-commit-golang
-    rev: v0.5.0
+    rev: v0.5.1
     hooks:
       - id: go-fmt # Runs gofmt
       - id: go-imports # Runs gofmt
       - id: go-mod-tidy # Tidies up and removes unused requires in go.mod using go mod tidy
   - repo: https://github.com/renovatebot/pre-commit-hooks
-    rev: 32.184.2
+    rev: 32.221.1
     hooks:
       - id: renovate-config-validator
